prevent form-error from shifting form-group [fix #138]

--- a/src/components/form.scss
+++ b/src/components/form.scss
@@ -175,4 +175,13 @@ textarea.form-control {
   .form-contorl[type='checkbox'] {
     grid-column: 1 / 1;
   }
+
+  /* create a new positioning context for absolutly positioned children */
+  transform: translateY(0);
+  .form-error {
+    position: absolute;
+    /* the bottom of it's positioning context + 50% of it's own height */
+    bottom: 0;
+    transform: translateY(50%);
+  }
 }
